--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,7 +17,7 @@
     "helmet": "^4.2.0",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.7",
-    "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.6"
-  }
+    "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {}
 }
