--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "bootstrap": "^4.5.3",
     "framer-motion": "^2.9.5",
     "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
