--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^2.9.5",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
